--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="MainActivity"
             android:exported="true">
             <intent-filter>
                 <action
@@ -28,5 +28,8 @@
         <activity
             android:name=".terminal.TerminalActivity"
             android:exported="false" />
+        <activity
+        android:name="SettingsActivity"
+        android:exported="false"/>
     </application>
 </manifest>
