--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,8 @@
         <activity
             android:name=".terminal.TerminalActivity"
             android:exported="false" />
+            <activity
+            android:name="SettingsActivity"
+            android:exported="false"/>
     </application>
 </manifest>
