--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
     <application
+        android:name="KabootApplication"
+        android:screenOrientation="portrait"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
@@ -29,5 +31,8 @@
             <activity
             android:name="SettingsActivity"
             android:exported="false"/>
+           	<activity
+			android:name="DebugActivity"
+			android:exported="false"/>
     </application>
 </manifest>
