--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
             <activity
             android:name="SettingsActivity"
             android:exported="false"/>
-           	<activity
-			android:name="DebugActivity"
-			android:exported="false"/>
+            <activity
+            android:name="CrashActivity"
+            android:exported="false"/>
     </application>
 </manifest>
